@@ -3,6 +3,8 @@ version 2.0.14+cvs (cvs):
 	* Add missing G_BEGIN_DECLS/G_END_DECLS for C++ support
 	* Fix feature request #2101451 by removing the sub-menu
 	  of the context menu as any other in-line spell checker does.
+	* Fix feature request #1523881, #1643622 and #2054637
+	  by adding a Language selector sub-menu.
 
 version 2.0.14 (2008-08-15):
 	* Additional translations (see po/ChangeLog).
